att de organização de aletas

--- a/teste.html
+++ b/teste.html
@@ -91,7 +91,7 @@
             height: 52px;
             padding: 8px;
             margin-left: 2%;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
         }
@@ -101,7 +101,7 @@
             height: 52px;
             padding: 8px;
             margin-left: 3%;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
         }
@@ -111,7 +111,7 @@
             height: 52px;
             padding: 8px;
             margin-left: 0%;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
         }
@@ -121,7 +121,7 @@
             height: 52px;
             padding: 8px;
             margin-left: 2%;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 7px;
             box-sizing: border-box;
         }
@@ -130,7 +130,7 @@
             width: 400px;
             height: 52px;
             padding: 8px;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
         }
@@ -141,7 +141,7 @@
             padding: 8px;
             margin-top: 10px;
             margin-left: 2%;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 7px;
             box-sizing: border-box;
         }
@@ -152,7 +152,7 @@
             padding: 8px;
             margin-left: 3%;
             margin-top: 10px;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
         }
@@ -162,7 +162,7 @@
             height: 52px;
             padding: 8px;
             margin-left: 3%;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 4px;
             box-sizing: border-box;
         }
@@ -173,24 +173,83 @@
             padding: 8px;
             margin-top: 10px;
             margin-left: 2%;
-            border: 1px solid #06c820;
+            border: 1px solid #ccc;
             border-radius: 7px;
             box-sizing: border-box;
         }
 
-        #warningMessage_dd {
-            width: 400px;
-            margin-left: 48%;
+        .next-input-email {
+            width: 477px;
+            height: 52px;
+            padding: 8px;
+            margin-top: 10px;
+            margin-left: 2%;
+            border: 1px solid #ccc;
+            border-radius: 7px;
+            box-sizing: border-box;
         }
 
-        #warningMessage_telefone {
-            width: 400px;
-            margin-left: 48%;
+        .next-input-cpf {
+            width: 450px;
+            height: 52px;
+            padding: 8px;
+            margin-top: 10px;
+            margin-left: 3%;
+            border: 1px solid #ccc;
+            border-radius: 7px;
+            box-sizing: border-box;
+        }
+
+        .descricao-cpf {
+            margin-top: 10px;
+            font-size: 14px;
+            font-weight: lighter;
+            max-width: 450px;
+            margin-left: 3%;
+        }
+
+        .alertas_1 {
+            max-width: 900px;
+            display: flex;
         }
 
         #warningMessage_nome {
-            width: 400px;
+            margin-left: 5%;
+            margin-top: 10px;
+        }
+
+        #warningMessage_dd {
+            margin-left: 30%;
+            margin-top: 10px;
+        }
+
+        #warningMessage_telefone {
+            margin-top: 10px;
+        }
+
+
+
+
+        .alertas {
+            max-width: 900px;
+            display: flex;
+        }
+
+        #estado-error {
             margin-left: 4%;
+            margin-top: 10px;
+        }
+
+        #cidade-error {
+            margin-left: 11%;
+            /* isso pode não ser necessário se estiver usando flex */
+            margin-top: 10px;
+        }
+
+        #cep-error {
+            margin-left: 31%;
+            /* isso pode não ser necessário se estiver usando flex */
+            margin-top: 10px;
         }
 
         .error-input {
@@ -257,6 +316,10 @@
             color: #007bff;
             background-color: #fff;
         }
+
+        .form-section-e-mail {
+            margin-left: 47%;
+        }
     </style>
 
     <button id="myBtn">Abrir Modal</button>
@@ -284,9 +347,11 @@
                                             placeholder="Número de Celular*" autocomplete="off" value="" required
                                             oninput="validarTelefone(this)">
 
-                                        <p id="warningMessage_nome" style="color: red;"></p>
-                                        <p id="warningMessage_dd" style="color: red;"></p>
-                                        <p id="warningMessage_telefone" style="color: red;"></p>
+                                        <div class="alertas_1">
+                                            <div id="warningMessage_nome" style="color: red;"></div>
+                                            <div id="warningMessage_dd" style="color: red;"></div>
+                                            <div id="warningMessage_telefone" style="color: red;"></div>
+                                        </div>
 
 
                                     </div>
@@ -308,50 +373,81 @@
                                 <div class="next-col">
                                     <div class="next-form-item">
 
+
                                         <input class="next-input-estado" id="estado" name="estado" placeholder="Estado*"
-                                            autocomplete="off" value="" required oninput="validarLetras(this)">
-
-
-                                        <input class="next-input-cidade" id="cidade" name="cidade" placeholder="Cidade*"
-                                            autocomplete="off" value="" required oninput="validarLetras(this)">
-
-
-                                        <input class="next-input-cep" id="cep" name="cep" placeholder="CEP*"
-                                            autocomplete="off" value="" required oninput="validarNumeros(this)"
-                                            onchange="formatarCEP(this)">
-
-
-                                        <input class="next-input-endereco" id="endereco" name="endereco"
-                                            placeholder="Endereço*" autocomplete="off" value="" required
+                                            autocomplete="off" value="" required oninput="validarEstado(this)"
                                             oninput="validarLetras(this)">
 
 
 
+                                        <input class="next-input-cidade" id="cidade" name="cidade" placeholder="Cidade*"
+                                            autocomplete="off" value="" required oninput="validarCidade(this)"
+                                            oninput="validarLetras(this)">
+
+
+
+                                        <input class="next-input-cep" id="cep" name="cep" placeholder="CEP*"
+                                            autocomplete="off" value="" required oninput="validarCEP(this)"
+                                            oninput="validarNumeros(this)" onchange="formatarCEP(this)">
+
+                                        <div class="alertas">
+                                            <div id="estado-error" style="color: red; display: none;"></div>
+                                            <div id="cidade-error" style="color: red; display: none;"></div>
+                                            <div id="cep-error" style="color: red; display: none;"></div>
+                                        </div>
+
+
+                                        <input class="next-input-endereco" id="endereco" name="endereco"
+                                            placeholder="Endereço*" autocomplete="off" value="" required
+                                            oninput="validarEndereco(this)" oninput="validarLetras(this)">
+                                        <div id="endereco-error" style="color: red; display: none;"></div>
+
+
+
                                         <input class="next-input-bairro" id="bairro" name="bairro" placeholder="Bairro*"
-                                            autocomplete="off" value="" required oninput="validarLetras(this)">
+                                            autocomplete="off" value="" required oninput="validarBairro(this)"
+                                            oninput="validarLetras(this)">
+                                        <div id="bairro-error" style="color: red; display: none;"></div>
 
 
                                         <input class="next-input-apto" id="apto" name="apto"
                                             placeholder="Apto, conjunto, unidade, etc." autocomplete=" off" value=""
-                                            required oninput="validarLetras(this)">
+                                            required oninput="validarApto(this)" oninput="validarLetras(this)">
+                                        <div id="apto-error" style="color: red; display: none;"></div>
 
                                         <input class="next-input-numero" id="numero" name="numero" placeholder="Número*"
-                                            autocomplete="off" value="" required oninput="validarNumeros(this)">
+                                            autocomplete="off" value="" required oninput="validarNumero(this)"
+                                            oninput="validarNumeros(this)">
+                                        <div id="numero-error" style="color: red; display: none;"></div>
+
+
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <div class="form-section">
-                        <div class="section-title">E-mail</div>
+
+                    <div class="form-section-cpf">
+                        <div class="section-title">CPF e E-mail</div>
                         <div class="section-body">
                             <div class="next-row form-row-wrap">
                                 <div class="next-col">
                                     <div class="next-form-item">
 
-                                        <input class="next-input" name="email" placeholder="E-mail" autocomplete="off"
-                                            value="" required type="email">
+                                        <input class="next-input-cpf" id="cpf" name="cpf" placeholder="CPF*"
+                                            autocomplete="off" value="" maxlength="14" required
+                                            oninput="validarNumeros(this); formatarCPF(this)"
+                                            onchange="validarCPF(this)">
+
+                                        <input class="next-input-email" name="email" placeholder="E-mail*"
+                                            autocomplete="off" value="" required type="email">
+
+                                        <div class="descricao-cpf">AliExpress
+                                            respeita sua privacidade e a confidencialidade dos seus dados. Suas
+                                            informações pessoais só serão coletadas, usadas e divulgadas de acordo com
+                                            as ‘Políticas de Privacidade do AliExpress.com’.&nbsp;
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -525,6 +621,162 @@
             const cepNumerico = cep.replace(/\D/g, ''); // Remove todos os caracteres não numéricos do CEP formatado
             buscarEndereco(cepNumerico); // Chama a função buscarEndereco() com o valor formatado do CEP
         }
+
+        function validarNumerosCPF(input) {
+            const value = input.value.replace(/[^0-9]/g, '');
+            if (value.length > 11) {
+                input.value = value.slice(0, 11);
+            } else {
+                input.value = value;
+            }
+        }
+        function formatarCPF(input) {
+            let cpf = input.value.replace(/\D/g, ''); // Remove todos os caracteres não numéricos
+            cpf = cpf.replace(/(\d{3})(\d{3})(\d{3})(\d{2})/, '$1.$2.$3-$4'); // Formata o CPF para "000.000.000-00"
+            input.value = cpf;
+        }
+
+        function validarCPF(input) {
+            let cpf = input.value.replace(/[^\d]+/g, '');
+            if (cpf === '') {
+                alert('CPF inválido');
+                input.value = '';
+                return false;
+            }
+
+            // Elimina CPFs invalidos conhecidos
+            if (cpf.length !== 11 ||
+                cpf === "00000000000" ||
+                cpf === "11111111111" ||
+                cpf === "22222222222" ||
+                cpf === "33333333333" ||
+                cpf === "44444444444" ||
+                cpf === "55555555555" ||
+                cpf === "66666666666" ||
+                cpf === "77777777777" ||
+                cpf === "88888888888" ||
+                cpf === "99999999999") {
+                alert('CPF inválido');
+                input.value = '';
+                return false;
+            }
+
+            // Valida 1o digito
+            let add = 0;
+            for (let i = 0; i < 9; i++)
+                add += parseInt(cpf.charAt(i)) * (10 - i);
+            let rev = 11 - (add % 11);
+            if (rev === 10 || rev === 11)
+                rev = 0;
+            if (rev !== parseInt(cpf.charAt(9))) {
+                alert('CPF inválido');
+                input.value = '';
+                return false;
+            }
+
+            // Valida 2o digito
+            add = 0;
+            for (let i = 0; i < 10; i++)
+                add += parseInt(cpf.charAt(i)) * (11 - i);
+            rev = 11 - (add % 11);
+            if (rev === 10 || rev === 11)
+                rev = 0;
+            if (rev !== parseInt(cpf.charAt(10))) {
+                alert('CPF inválido');
+                input.value = '';
+                return false;
+            }
+
+            alert('CPF válido');
+            return true;
+        }
+
+
+        function validarEstado(input) {
+            const errorDiv = document.getElementById('estado-error');
+            if (input.value === '') {
+                errorDiv.style.display = 'block';
+                errorDiv.innerText = 'Por favor, insira o estado.';
+                input.style.border = '1px solid red';  // faz a borda ficar vermelha
+            } else {
+                errorDiv.style.display = 'none';
+                input.style.border = '';  // remove a borda vermelha
+            }
+        }
+
+
+        function validarCidade(input) {
+            const errorDiv = document.getElementById('cidade-error');
+            if (input.value === '') {
+                errorDiv.style.display = 'block';
+                errorDiv.innerText = 'Por favor, insira a cidade.';
+                input.style.border = '1px solid red';  // faz a borda ficar vermelha
+            } else {
+                errorDiv.style.display = 'none';
+                input.style.border = '';  // remove a borda vermelha
+            }
+        }
+
+        function validarCEP(input) {
+            const errorDiv = document.getElementById('cep-error');
+            if (input.value === '') {
+                errorDiv.style.display = 'block';
+                errorDiv.innerText = 'Por favor, insira o CEP.';
+                input.style.border = '1px solid red';  // faz a borda ficar vermelha
+            } else {
+                errorDiv.style.display = 'none';
+                input.style.border = '';  // remove a borda vermelha
+            }
+        }
+
+        function validarEndereco(input) {
+            const errorDiv = document.getElementById('endereco-error');
+            if (input.value === '') {
+                errorDiv.style.display = 'block';
+                errorDiv.innerText = 'Por favor, insira o endereço.';
+                input.style.border = '1px solid red';  // faz a borda ficar vermelha
+            } else {
+                errorDiv.style.display = 'none';
+                input.style.border = '';  // remove a borda vermelha
+            }
+        }
+
+        function validarBairro(input) {
+            const errorDiv = document.getElementById('bairro-error');
+            if (input.value === '') {
+                errorDiv.style.display = 'block';
+                errorDiv.innerText = 'Por favor, insira o bairro.';
+                input.style.border = '1px solid red';  // faz a borda ficar vermelha
+            } else {
+                errorDiv.style.display = 'none';
+                input.style.border = '';  // remove a borda vermelha
+            }
+        }
+
+        function validarApto(input) {
+            const errorDiv = document.getElementById('apto-error');
+            if (input.value === '') {
+                errorDiv.style.display = 'block';
+                errorDiv.innerText = 'Por favor, insira o número do apartamento.';
+                input.style.border = '1px solid red';  // faz a borda ficar vermelha
+            } else {
+                errorDiv.style.display = 'none';
+                input.style.border = '';  // remove a borda vermelha
+            }
+        }
+
+        function validarNumero(input) {
+            const errorDiv = document.getElementById('numero-error');
+            if (input.value === '') {
+                errorDiv.style.display = 'block';
+                errorDiv.innerText = 'Por favor, insira o número.';
+                input.style.border = '1px solid red';  // faz a borda ficar vermelha
+            } else {
+                errorDiv.style.display = 'none';
+                input.style.border = '';  // remove a borda vermelha
+            }
+        }
+
 
         // Função para fechar o popup
         function fecharPopup() {
